--- a/ThongKe/Views/Shared/_LoginPartial.cshtml
+++ b/ThongKe/Views/Shared/_LoginPartial.cshtml
@@ -2,12 +2,16 @@
 @using ThongKe.Helps
 @inject IHttpContextAccessor HttpContextAccessor
 
+@{
+    var user = HttpContextAccessor.HttpContext.Session.Get<Users>("loginUser");
+}
+
 <ul class="navbar-nav ml-auto">
 
     <li class="nav-item dropdown">
 
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-user">Welcome - @(HttpContextAccessor.HttpContext.Session.Get<Users>("loginUser").Username)!</i>
+            <i class="fas fa-user">Welcome - @(user.Hoten + " - " + user.Chinhanh)!</i>
         </a>
 
         <div class="dropdown-menu dropdown-menu-right " aria-labelledby="navbarDropdownMenuLink">
