--- a/ThongKe/Views/BaoCao/DoanhSoTheoSale.cshtml
+++ b/ThongKe/Views/BaoCao/DoanhSoTheoSale.cshtml
@@ -11,7 +11,7 @@
     <!-- Default box -->
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title">BÁO CÁO DOANH SỐ THEO SALES</h3>
+            <h3 class="card-title text-bold">BÁO CÁO DOANH SỐ THEO SALES</h3>
 
             <div class="card-tools">
                 <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
